--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,5 +7,13 @@
     "noEmit": false
   },
   "include": ["./src"],
-  "exclude": ["./src/**/*.test.*"]
+  "exclude": [
+    "./src/**/_test.*",
+    "./src/**/_spec.*",
+    "./src/**/*.test.*",
+    "./src/**/*.test-d.*",
+    "./src/**/*.spec.*",
+    "./src/**/*.spec-d.*",
+    "./src/**/__tests__"
+  ]
 }
