feat: expose dir instead of layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     // Package
     "module": "nodenext",
     "moduleResolution": "nodenext",
+    "target": "es2022",
 
     // Output
     "verbatimModuleSyntax": true,
